--- a/views/signup.html
+++ b/views/signup.html
@@ -7,7 +7,7 @@
   <body>
     <form method="post">
       <input type="text" name="name">Please enter the athlete name</input>
-      <input type="number" name="age">How old are you?</input>
+      <input type="date" name="dob">What is your date of birth?</input>
       <input type="text" name="email">Email Address</input>
       <input type="password" name="password">Please enter a password</input>
       <input type="submit" value="submit"></input>
