--- a/api/views/home.html
+++ b/api/views/home.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <p id='App'>Todos os palavras grande</p>
+    <p id='root'>Todos os palavras grande</p>
   </body>
 </html>
