--- a/healthnut/src/index.css
+++ b/healthnut/src/index.css
@@ -5,6 +5,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-color: #2A9D8F;
+}
+
+.description {
+  background-color: #264653;
+  color: #E9C46A;
+}
+
+.submitButton {
+  height: 90px;
+  width: 200px;
+  border-radius: 10%;
+  display: block;
+  margin:auto;
+  font-size: 250%;
+}
+
+.searchText {
+  text-align: center;
+  height: 90px;
+  width: 200px;
+  margin-top:5%;
+  border-radius: 10%;
 }
 
 code {
